manifests/demo.yml

apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: spinnaker-demo
  namespace: '${ parameters.namespace }'
  labels:
    source: demo
    stack: frontend
    app: spinnaker
    changed: "false"
spec:
  replicas: 2
  selector:
    matchLabels:
      source: demo
      app: spinnaker
  template:
    metadata:
      labels:
        source: demo
        app: spinnaker
    spec:
      containers:
      - name: primary
        image: index.docker.io/raphaelfjesus/spinnaker-demo:${parameters["image-tag"]}
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /
            port: 8000
---

kind: Service
apiVersion: v1
metadata:
  name: spinnaker-demo
  namespace: '${ parameters.namespace }'
spec:
  type: ClusterIP
  selector:
    source: demo
    app: spinnaker
  ports:
  - name: http
    protocol: TCP
    port: 8000
    targetPort: 8000

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: spinnaker-demo
  namespace: '${ parameters.namespace }'
  labels:
    source: demo
    app: spinnaker
spec:
  rules:
  - host: '${parameters["namespace"] == "staging" ? "api.demo.staging.local.com.br" : "api.demo.local.com.br"}'
    http:
      paths:
      - backend:
          serviceName: spinnaker-demo
          servicePort: 8000
        path: /
